--- a/acko_style.css
+++ b/acko_style.css
@@ -233,6 +233,48 @@ header{
     
 }
 
+.log-flex{
+    display: none;
+    box-sizing: border-box;
+    background-color: white;
+    border-radius: 8px;
+    padding: 8px;
+    width: 230px;
+    position: absolute;
+    top: 55px;
+    z-index: 20;
+    right: 125px;
+    flex-direction: column;
+}
+
+.log-flex a{
+    color: rgb(40 46 51);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.mng-pol{
+    display: flex;
+    padding: 10px;
+    width: 100%;
+    align-items: center;
+}
+
+.raise{
+    display: flex;
+    padding: 10px;
+    width: 100%;
+    align-items: center;
+}
+
+.renew{
+    display: flex;
+    padding: 10px;
+    width: 100%;
+    align-items: center;
+}
+
 .btn{
     display: flex;
     width: auto;
@@ -261,8 +303,18 @@ header{
     background-color: rgb(0 168 113);
 }
 
+.login:hover .log-flex{
+    display: flex;
+}
+
 .log img{
     width: 1em;
+}
+
+.log-flex img{
+    height: 24px;
+    width: 24px;
+    margin-right: 8px;
 }
 
 .login a{
