--- a/acko_style.css
+++ b/acko_style.css
@@ -303,7 +303,7 @@ header{
     background-color: rgb(0 168 113);
 }
 
-.login:hover .log-flex{
+.btn:hover .log-flex{
     display: flex;
 }
 
@@ -876,4 +876,76 @@ main{
     color: rgb(85 90 104);
     line-height: 10px;
     margin: 0px 0px 4px;
+}
+
+.partner{
+    background-color: white;
+    display: flex;
+    box-sizing: border-box;
+    width: 100%;
+    justify-content: center ;
+}
+
+.partner-flex{
+    box-sizing: border-box;
+    padding: 20px;
+    width: 100%;
+    max-width: 1170px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.head1{
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 800;
+    color:rgb(40 46 51);
+    margin: 60px 0px 10px;
+    text-align: center;
+}
+
+.head2{
+    font-size: 16px;
+    margin: 0px 0px 42px;
+    font-weight: normal;
+    line-height: 18px;
+    text-align: center;
+    color: rgb(67 79 90);
+}
+
+.part-logo{
+    display: flex;
+    box-sizing: border-box;
+    margin: 0px auto;
+    justify-content: center;
+    max-width: 724px;
+    width: 100%;
+    flex-flow: row wrap;
+}
+
+.part{
+    width: 100%;
+    max-width: 50px;
+    max-height: 50px;
+    margin: 0px 16px 28px;
+
+}
+
+.part img{
+    width: 100%;
+}
+
+.claim{
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 600;
+    color: rgb(53 177 113);
+    border: 1px solid rgb(68 203 134);
+    border-radius: 8px;
+    padding: 15px;
+    width: 135px;
+    margin: 40px auto 62px;
+    justify-content: center;
+    text-align: center;
 }
