--- a/acko_style.css
+++ b/acko_style.css
@@ -949,3 +949,76 @@ main{
     justify-content: center;
     text-align: center;
 }
+
+.love{
+    background-color: rgb(246 247 251);
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0px 10px;
+}
+
+.love-flex{
+    display: flex;
+    flex-direction: column;
+    padding: 60px 0px;
+    margin: auto;
+    max-width: 1170px;
+}
+
+.love-head{
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 800;
+    color: rgb(40 46 51);
+    margin-bottom: 60px;
+    text-align: center;
+}
+
+.sub-love{
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+    box-sizing: border-box;
+    justify-content: center;
+}
+
+.sub-1{
+    box-sizing: border-box;
+    width: 33.33%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  
+}
+
+.sub-2{
+    width: 100%;
+    padding: 0px 10px;
+    max-width: 311px;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+
+.sub-2 img{
+    width: 100%;
+    max-width: 120px;
+    max-height: 120px;
+    margin: 0px auto 16px;
+}
+
+.love-p1{
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 600px;
+    color: rgb(40 46 51);
+    margin: 0px 0px 16px;
+    text-align: center;
+}
+
+.love-p2{
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(67 79 90);
+    text-align: center;
+}
