--- a/acko_style.css
+++ b/acko_style.css
@@ -1236,17 +1236,29 @@ main{
 
     .poster2{
         width: 100%;
-        max-width: 65%;
         justify-content: space-around;
+        max-width: 300px;
+        margin-top: 12px;
     }
 
     .pos{
-        padding: 1em 0px;
         max-height: 100%;
         min-height: 100%;
     }
     .pos-p{
         color: white;
+    }
+
+    .spons-logo{
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+    }
+
+    .s1{
+        display: flex;
+        justify-content: center;
+        width: 100%;
     }
 
 }
