--- a/acko_style.css
+++ b/acko_style.css
@@ -1184,7 +1184,9 @@ main{
     .new_car{
         padding: 12px 0px;
         border: 1px solid rgb(228 234 241);
+        display: flex;
     }
+    
     .new_car_in .mob{
         display: block;
         max-width: 22px;
